# rust

./: README.md
rfc2603/: Cargo.toml  LICENSE-MIT  README.md  real_symbols.txt
rfc2603/examples/: basic_usage.rs  generate_from_stele.rs  proof_of_concept.rs  verify_demangling.rs  verify_symbols.sh
rfc2603/src/: lib.rs  rustc_port.rs  v0_mangler.rs
rfc2603/tests/: compare_with_rustc.rs  complex_symbols_test.rs  decode_real_symbols.rs  fucked_up_types_test.rs  real_shapes_test.rs  real_symbols.rs  roundtrip_test.rs  verify_against_test_symbols.rs  verify_complex_types_rustc.rs  verify_exact_symbols.rs  verify_nm_output.rs  verify_shapes_against_rustc.rs
test-symbols/: .gitignore  Cargo.toml  symbols.txt
test-symbols/src/: lib.rs
