[package]
name = "rfc2603"
version = "0.1.0"
edition = "2021"
description = "Standalone implementation of Rust v0 symbol name mangling (RFC 2603)"
license = "MIT OR Apache-2.0"

[dependencies]
facet = "0.31.3"
# Punycode encoding for Unicode identifiers
punycode = "0.4"

# This crate is standalone and not part of the rust workspace
[workspace]
