[package]
name = "rfc2603"
version = "0.1.0"
edition = "2021"
description = "Standalone implementation of Rust v0 symbol name mangling (RFC 2603)"
license = "MIT OR Apache-2.0"

[dependencies]
dlopen2 = "0.8.0"
facet = "0.31.3"
facet-stele = { git = "file:///home/user/facet-stele", version = "0.1.0" }
# Punycode encoding for Unicode identifiers
punycode = "0.4"
stele-inventory = { git = "file:///home/user/facet-stele", version = "0.1.0" }

[dev-dependencies]
rustc-demangle = "0.1"
tempfile = "3.8"

# This crate is standalone and not part of the rust workspace
[workspace]
